# chorus

./: .gitignore  404.html  INSTALL.md  LICENSE  README.md  docker-compose.yml  index.html  sitemap.xml
.devcontainer/client/: devcontainer.json
.devcontainer/server/: devcontainer.json
.github/workflows/: api-server-test.yml  codeql.yml  (+3 more)
blog/: index.html
client/: Dockerfile  README.md  biome.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
docs/: docusaurus.config.ts  package-lock.json  package.json
engine/: Dockerfile  README.md  pyproject.toml
engine/chorus_engine/: test_math.py
engine/convergent_engine/: __init__.py  math.py  test_math.py
engine/engine/convergent_engine/: comment_consensus.csv  labels.csv  reduced.csv
engine/scripts/: evaluate.py  process_csv.py
markdown-page/: index.html
polis.server/: Dockerfile  requirements.txt
server/: Dockerfile  Dockerfile.wheel  entrypoint.sh  pyproject.toml  requirements.txt  sample.env  test.env
server/alembic/: env.py
server/alembic/versions/: 079d5bd30d3b_anonymous_users.py  1e8fa719ca11_conversation_customization_fields.py  4421815d5b1c_approved_field_in_comments.py  587201e1b5b2_initial_migration.py  5a6e967ea8c4_conversation_display_unmoderated_option.py  717a1dc80930_add_creation_and_update_dates.py  73905afe8fee_unique_friendly_links.py  75cdc2b46274_allow_commenting_and_voting_booleans.py  cd77391f08b9_user_friendly_links_for_conversations.py  d6c0ca995790_add_pca_table.py
server/chorus/: database.py  main.py  settings.py
server/chorus/auth/: user.py
server/chorus/core/: routines.py
server/chorus/models/: __init__.py  conversations.py  users.py
server/chorus/routers/: auth.py  conversation.py  customization.py  imports.py  moderation.py
server/chorus/tests/: conftest.py  test_analysis.py  test_auth.py  test_conversation.py  test_customization.py  test_main.py  test_moderation.py
server/convergent/: database.py  main.py  settings.py
server/convergent/auth/: user.py
server/convergent/core/: routines.py
server/convergent/models/: __init__.py  conversations.py  users.py
server/convergent/routers/: analysis.py  auth.py  conversation.py  imports.py  moderation.py
server/convergent/tests/: conftest.py  test_analysis.py  test_auth.py  test_conversation.py  test_main.py  test_moderation.py
server/engine-dist/: chorus_engine-0.1.1-py3-none-any.whl  convergent_engine-0.1.0.whl  convergent_engine-0.1.1-py3-none-any.whl
server/psqto/: database.py  main.py  settings.py
server/psqto/auth/: user.py
server/psqto/core/: routines.py
server/psqto/models/: conversations.py  users.py
server/psqto/routers/: analysis.py  auth.py  conversation.py  moderation.py
(+169 files in other folders)
